Phase 1h: reduce build to the llm4zio module; strip agents/mcp/rag
Drops the multi-agent router/coordinator/memory machinery (speculative
abstraction), the embedded MCP server, and the RAG pipeline. build.sbt now
defines a single llm4zio module + a publish-skipped root, with product-only
deps removed (EclipseStore, telegram, scalatags, webjars, opentelemetry,
zio-config, zio-cli, iron).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>